# congenial-rotary-phone

./: .gitignore  Makefile  README.md  pyproject.toml
main/api/: serializers.py  tests.py  urls.py  views.py  views_gitsvn.py  views_health.py  views_home.py  views_movieflex.py  views_system.py  views_tasks.py
main/gitsvn/: admin.py  functions.py  models.py  urls.py  views.py
main/gitsvn/migrations/: 0001_initial.py  0002_projectdetail_git.py  0003_projectdetail_default_branch_projectdetail_namespace_and_more.py
main/gitsvn/templates/: gitsvn.html
main/health/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
main/health/migrations/: 0001_initial.py  0002_alter_rules_name.py  0003_alter_rules_options.py  0004_alter_rules_options.py  0005_rename_rules_rule.py  0006_alter_rule_name.py  0007_alter_rule_name.py  0008_alter_rule_name.py  0009_alter_rule_name.py  0010_dailytracker.py  0011_dailytracker_date.py  0012_alter_dailytracker_date.py  (+7 more)
main/home/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
main/movflex/: admin.py  apps.py  models.py
main/movieflex/: admin.py  apps.py  models.py  views.py
main/system/: admin.py  apps.py  models.py  urls.py  views.py
main/tasks/: admin.py  apps.py  models.py
main/utility/: __init__.py  common.py  functions.py  mixins.py
requirements/: requirements.txt
rotary_phone/: celery.py  celeryconfig.py  context_processor.py  settings.py  urls.py
templates/base/: base.html  css.html  headers.html  js.html  logging.html  navbar.html  sidebar.html
templates/registration/: login.html
(+69 files in other folders)
